# mekansimRatioCalculator

./: Cargo.toml  README.md
data/: optimal_reactors.json  optimal_turbines.json
src/: boiler.rs  fission.rs  lookup_table.rs  main.rs  metricPrefix.rs  metric_prefix.rs  recipe.rs  setups.rs  turbine.rs  utils.rs
tests/: turbine_fission_test.rs  turbines_test.rs
