[package]
name = "mekanism_ratio_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
num = "0.4.1"
factor = "0.4.0"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.108"
num-format = "0.4.4"
csv = "1.3.0"